# prt

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE_TUI_MIGRATION.plan  CONTRIBUTING.md  DB_MANAGEMENT.md  ISSUE_114_IMPLEMENTATION_PLAN.md  ISSUE_114_REVISED_PLAN.md  Makefile  PHASE3_COMPLETE_SUMMARY.md  PHASE_A_C_COMPLETION.md  PROFILE_IMAGE_BUG_ANALYSIS.md  QUICK_START_LLM.md  README.md  ROADMAP.md  STEP1_COMPLETE_SUMMARY.md  alembic.ini  create_initial_migration.py  debug_llm_workflow.py  download_library_src.sh  gemini.md  init.sh  make_directory.py  peewee_sqlcipher3_analysis.md  prt.db  prt_web.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_migration.py  setup.sh  setup_adws.sh  setup_database.py  sqlcipher3_bug_report.md  sqlcipher3_documentation_bug_report.md  test_llama3_communication.py  (+2 more)
.github/: pull_request_template.md
PRD/: prt_prd_chatgpt.md  prt_prd_claude.md  prt_prd_gemini.md  prt_prd_mvp.md
adws/: README.md  adw_plan_build.py  agent.py  data_types.py  github.py  health_check.py  trigger_cron.py  trigger_webhook.py  utils.py
alembic/: env.py
docs/: ARCHITECTURAL_COMPLIANCE.md  BACKUP_SYSTEM.md  DATABASE_STRATEGY_MIGRATION.md  DB_MANAGEMENT.md  DEV_SETUP.md  ENCRYPTION_IMPLEMENTATION.md  EVALS.md  IMPORT_EXPORT_SCREENS.md  INSTALL.md  INSTALLATION.md  JSON_EXPORT_SCHEMA.md  OLLAMA_INTEGRATION.md  Phase3_Design_Decisions.md  RUNNING_TESTS.md  SECURITY.md  TESTING_STRATEGY.md  TUI_Implementation_Bugs.md  proposed_schema.json  schema_plan.md
examples/: ollama_chat_example.py
migrations/: 001_fix_contacts_schema.py  002_fix_relationships_schema.py  003_migrate_old_schema.py  004_create_initial_migration.py  005_add_performance_indexes.sql  README.md  add_fts5_support.sql  encrypt_database.py  run_migrations.py  setup_database.py
prt/: api.py  cli.py  cli_operations.py  config.py  db.py  encrypted_db.py  google_contacts.py  llm.py  llm_commands.py  models.py
prt_src/: __init__.py  __main__.py  api.py  cli.py  cli_map.py  cli_old.py  cli_operations.py  config.py  db.py  debug_info.py  fixture_manager.py  google_contacts.py  google_takeout.py  llm.py  llm_base.py  llm_commands.py  llm_factory.py  llm_llamacpp.py  llm_memory.py  llm_model_registry.py  llm_ollama.py  llm_prompts.py  llm_supported_models.py  llm_tools.py  logging_config.py  models.py  peewee_models.py  schema_info.py  schema_manager.py
scripts/: lint.sh  run-ci-tests.sh  run-local-tests.sh
specs/: bug_chat_screen_init_output_instead_of_llm_response.md  bug_cli_modularization_missing_imports_and_flags.md  bug_config_file_corruption_test_failures.md  bug_contacts_with_images_performance_optimization.md  bug_debug_info_system_prompt_preview.md  bug_execute_sql_json_serialization.md  bug_execute_sql_tool_fixes.md  bug_fixture_database_isolation.md  bug_fts5_migration_test_refactor.md  bug_llama3_8b_local_communication_error.md  bug_llm_contacts_with_images_test_reliability.md  bug_llm_memory_chaining_test_reliability.md  bug_llm_memory_chaining_test_reliability_improved.md  bug_llm_query_optimization_test_reliability_and_functional_validation.md  bug_mistral_ollama_communication_failure.md  bug_mistral_tool_calling_approval_loop.md  bug_pr139_fixes.md  bug_ruff_code_quality_errors.md  bug_setup_adws_env_file_corruption.md  bug_test_llm_phase4_directory_field_naming.md  debugging_llm_zero_length_response.md  feature_architectural_compliance_refactoring.md  feature_cli_modularization_refactoring.md  feature_download_library_src_list_command.md  feature_llm_provider_parity_architecture.md  feature_mistral_tool_calling_support.md  feature_multiple_llm_model_support.md  feature_pr157_followup_fixes.md  feature_prt_debug_info_command.md  feature_setup_adws_auto_git_detection.md  feature_system_prompt_optimization.md  fixture-database-isolation-setup-option-bug.md  integration_test_bug_fixes.md  integration_test_categorization_upgrade.md  test_optimization_and_ci_configuration.md
tests/: conftest.py  fixtures.py  promptfoo_runner.py  test_api.py  test_api_tags_notes.py  test_autocomplete_engine.py  test_backup_system.py  test_chat_navigation.py  test_chat_progress_indicator.py  test_chat_tool_calling_json_handling.py  test_cli.py  test_cli_operations.py  test_config.py  test_contact_cache.py  test_contact_detail_screen.py  test_contact_form_screen.py  test_contacts_with_images_performance.py  test_core_operations.py  test_database_performance_indexes.py  test_db.py  (+61 more)
(+275 files in other folders)
